POWR-1375 title display size and fix admin tabs

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -61,9 +61,7 @@
     </div>
   </nav>
 </header>
-{% if tabs %}
-    {{ tabs }}
-{% endif %}
+  {{ page.tabs }}
 {% set messages = page.messages|render %}
 {% if messages %}
   {{ page.messages }}
@@ -77,9 +75,10 @@
 {%
   set container_classes = [
     not is_front ? 'container',
+    'mt-4'
   ]
 %}
-<div {{ attributes.addClass(container_classes) }} id="content" role="main">
+<div {{ attributes.addClass(container_classes) }}>
   <div class="row">
     {{ page.content }}
     {% if page.tools %}
