--- a/web/themes/custom/cloudy/templates/layout/region--tabs.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--tabs.html.twig
@@ -16,7 +16,9 @@
 #}
 
 {% if content %}
-  <div{{ attributes.addClass('bg-light')}} role="navigation" id="tabs">
-    {{ content }}
+  <div class="bg-light admin-tabs" role="navigation" id="tabs">
+    <div class="region region-tabs">
+      {{ content }}
+    </div>
   </div>
 {% endif %}
