--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -34,14 +34,12 @@
  *
  */
 #}
-{% set global_admin = page.global_admin|render %}
-{% if global_admin %}
-  {{ page.global_admin }}
-{% endif %}
+{{ page.global_admin }}
 {{ page.pre_header }}
 <a href="#main" class="visually-hidden focusable skip-link">
     {{ 'Skip to main content'|t }}
 </a>
+{# TODO: The skip to content here is a duplicate of the one in html.html.twig #}
 <header id="header" class="header" aria-label="{{ 'Site header'|t}}" role="banner">
   <nav class="navbar navbar-light navbar-expand-xl" id="navbar-main">
     <div class="container">
@@ -61,21 +59,13 @@
     </div>
   </nav>
 </header>
-  {{ page.tabs }}
-{% set messages = page.messages|render %}
-{% if messages %}
-  {{ page.messages }}
-{% endif %}
-{% set pre_content = page.pre_content|render %}
-{% if pre_content %}
-  <section class="container">
-    {{ page.pre_content }}
-  </section>
-{% endif %}
+{{ page.tabs }}
+{{ page.messages }}
+{{ page.pre_content }}
 {%
   set container_classes = [
     not is_front ? 'container',
-    'mt-4'
+    not is_front ? 'mt-4'
   ]
 %}
 <div {{ attributes.addClass(container_classes) }}>
