--- a/web/themes/custom/cloudy/templates/layout/region--content.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--content.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Default theme implementation to display a region.
+ * Display the content region
  *
  * Available variables:
  * - content: The content for this region, typically blocks.
