--- a/web/themes/custom/cloudy/templates/layout/region--pre_content.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--pre_content.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Display the tabs region
+ * Display the pre-content region
  *
  * Available variables:
  * - content: The content for this region, typically blocks.
@@ -16,9 +16,7 @@
 #}
 
 {% if content %}
-  <div class="bg-light admin-tabs" role="navigation" id="tabs">
-    <div class="region region-tabs">
-      {{ content }}
-    </div>
-  </div>
+  <section{{ attributes.addClass('pre-content','container')}}>
+    {{ content }}
+  </section>
 {% endif %}
