--- a/web/themes/custom/cloudy/templates/field/field-group-html-element--group-date.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field-group-html-element--group-date.html.twig
@@ -1,6 +1,7 @@
 {% embed "field-group-html-element.html.twig" with {
   'margin': '2'
 } %}
+  {% set display_date_toggle = element["field_display_date_toggle"][0]["#markup"] %}
   {% set display_date = element["field_display_date"]|render %}
   {% set start_date = element["field_start_date"]|render %}
   {% set end_date = element["field_end_date"]|render %}
@@ -11,7 +12,7 @@
   {% endblock %}
   {% block content %}
     <span class="flex items-center">
-      {% if display_date|striptags|trim is not empty %}
+      {% if display_date|striptags|trim is not empty and display_date_toggle == 1 %}
         {{ display_date }}
       {% elseif start_date is not empty and end_date is not empty %}
         {{ start_date }}
