POWR-1370 Add max width to correctly display retina images

--- a/web/themes/custom/cloudy/scss/components/_media.scss
+++ b/web/themes/custom/cloudy/scss/components/_media.scss
@@ -60,3 +60,12 @@
     margin-bottom: ($spacer / 2);
   }
 }
+
+.person {
+  &--elected-official-default {
+    max-width: 200px;
+    @include media-breakpoint-up(lg) {
+      max-width: 264px;
+    }
+  }
+}
