POWR-1353 Use a custom field formatter on geo file

--- a/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
@@ -17,7 +17,9 @@
 
 {{ attach_library('portland_leaflet_maps/portland_leaflet_maps') }}
 
-Test: {{ file_url(content.field_document['#items'].entity.uri.value) }}
+File URL: {{ file_url(content.field_geo_file['#items'].entity.uri.value) }}
+
+{{ content.field_geo_file }}
 
 {% else %}
   {% include 'media.html.twig' %}
