--- a/web/themes/custom/cloudy/scss/components/_item-list.scss
+++ b/web/themes/custom/cloudy/scss/components/_item-list.scss
@@ -57,3 +57,19 @@
 .view-community-actions {
     margin-top: 1rem;
 }
+
+/* TOC ul styles */
+.toc-title {
+    padding: .5rem 1rem;
+    background-image: linear-gradient(-60deg,$gold,$gold 25%,$primary 0);
+    border-radius: 3px;
+    color: $white;
+}
+.toc-h2 {
+    font-weight: 600;
+}
+.toc-js {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    border-bottom-color: linear
+}
