Add browser detection in map twig

--- a/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
@@ -14,6 +14,9 @@
 #}
 
 {% if content.field_map_type['#items'].value=='Geo file' %}
+  {% if ( 'Trident' in app.request.headers.get('User-Agent') ) or ( 'Edge' in app.request.headers.get('User-Agent') ) ) %}
+  {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
+  {% endif %}
   {{ attach_library('portland_leaflet_maps/portland_leaflet_maps') }}
   {{ content.field_geo_file }}
 {% else %}
