--- a/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
@@ -14,7 +14,7 @@
 #}
 
 {% if content.field_map_type['#items'].value=='Geo file' %}
-{{ app.request.headers.get('User-Agent') }}
+{{ dump(app.request.headers) }}
   {% if ( 'Trident' in app.request.headers.get('User-Agent') ) or ( 'Edge' in app.request.headers.get('User-Agent') ) %}
   {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
   {% endif %}
