Check user agent in hook

--- a/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
@@ -14,8 +14,7 @@
 #}
 
 {% if content.field_map_type['#items'].value=='Geo file' %}
-{{ dump(app.request.headers) }}
-  {% if ( 'Trident' in app.request.headers.get('User-Agent') ) or ( 'Edge' in app.request.headers.get('User-Agent') ) %}
+  {% if isEdgeOrIE == 'true' ) %}
   {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
   {% endif %}
   {{ attach_library('portland_leaflet_maps/portland_leaflet_maps') }}
