POWR-1478 removing background image from copyright block and replacing with inline image

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -216,10 +216,11 @@ ol.steps ul ul {
 }
 
 .block-copyright-block {
-  background: url(/themes/custom/cloudy/images/city-seal.png) no-repeat bottom
-    right;
   width: 100%;
   min-height: 200px;
+  img {
+    float: right;
+  }
 }
 
 .view-header {
