--- a/web/themes/custom/cloudy/templates/block/block.html.twig
+++ b/web/themes/custom/cloudy/templates/block/block.html.twig
@@ -55,6 +55,9 @@
     {% block content %}
       <div{{ content_attributes.addClass('content') }}>
         {{ content }}
+        {% if 'copyright' in plugin_id %}
+          <img src="/themes/custom/cloudy/images/city-seal.png" alt="City of Portland, Oregon. 1851" />
+        {% endif %}
       </div>
     {% endblock %}
   </div>
