POWR-1541 Show map based on map type

--- a/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map--embedded.html.twig
@@ -14,8 +14,7 @@
 #}
 
 {% if content.field_map_type['#items'].value=='Geo file' %}
-isEdgeOrIE = {{ isEdgeOrIE }}
-  {% if isEdgeOrIE == "true" %}
+  {% if isEdgeOrIE == 'true' %}
   {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
   {% endif %}
   {{ attach_library('portland_leaflet_maps/portland_leaflet_maps') }}
