POWR-1483 add fields and basic block view for group pages menu

--- a/web/themes/custom/cloudy/scss/components/_nav.scss
+++ b/web/themes/custom/cloudy/scss/components/_nav.scss
@@ -18,3 +18,12 @@
         background-color: rgba($black, 0.15);
       }
 }
+
+.menu--pages a.nav-link {
+  border-top: 1px solid $gray-300;
+}
+
+.menu--pages a.nav-link.active {
+  border-left: 3px solid $black;
+  color: $black;
+}
