POWR-1483 add in admin view for sorting

--- a/web/themes/custom/cloudy/scss/components/_tablesort-indicator.scss
+++ b/web/themes/custom/cloudy/scss/components/_tablesort-indicator.scss
@@ -24,3 +24,8 @@ a:hover .tablesort--asc {
 a:hover .tablesort--desc {
   background-image: url(/core/misc/icons/008ee6/twistie-up.svg);
 }
+
+a.tabledrag-handle .handle {
+  width: 24px;
+  height: 24px;
+}
