POWR-1483 refactor to be page-based

--- a/web/themes/custom/cloudy/scss/components/_nav.scss
+++ b/web/themes/custom/cloudy/scss/components/_nav.scss
@@ -27,3 +27,8 @@
   border-left: 3px solid $black;
   color: $black;
 }
+
+.view-id-page_menu h3 {
+  font-size: 1rem;
+  font-weight: $font-weight-semibold;
+}
