--- a/web/themes/custom/cloudy/templates/layout/region--menu.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--menu.html.twig
@@ -16,7 +16,7 @@
 #}
 
 {% if content %}
-  <div{{ attributes.addClass('menu','col-lg-3', 'col-sm-12','order-1')}}>
+  <div{{ attributes.addClass('menu','col-lg-3', 'col-sm-12', 'order-xl-1', 'order-sm-2')}}>
     {{ content }}
   </div>
 {% endif %}
