--- a/web/themes/custom/cloudy/templates/layout/region--content.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--content.html.twig
@@ -16,7 +16,7 @@
 #}
 
 {% if content %}
-  <main{{ attributes.addClass('main-content','col','order-2') }} id="content" role="main">
+  <main{{ attributes.addClass('main-content', 'col', 'order-xl-2', 'order-sm-1') }} id="content" role="main">
     {{ content }}
   </main>
 {% endif %}
