POWR-1473 Tartin' up services

--- a/web/themes/custom/cloudy/templates/field/field--field-published-on.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-published-on.html.twig
@@ -6,7 +6,7 @@
     {{ parent() }}
   {% endblock %}
   {% block label %}
-    {% set title_classes = title_classes|merge(['mb-0', 'small']) %}
+    {% set title_classes = title_classes|merge(['mb-0']) %}
     {{ parent() }}
   {% endblock %}
 {% endembed %}
