--- a/web/themes/custom/cloudy/templates/media/media--map.html.twig
+++ b/web/themes/custom/cloudy/templates/media/media--map.html.twig
@@ -13,9 +13,9 @@
  */
 #}
 
-{% if content.field_map_type['#items'].value=='Geo file' %}
+{% if content.field_geo_file %}
   {% if isEdgeOrIE == 'true' %}
-  {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
+    {{ attach_library('portland_leaflet_maps/portland_textencoder') }}
   {% endif %}
   {{ attach_library('portland_leaflet_maps/portland_leaflet_maps') }}
   {{ content.field_geo_file }}
