POWR-1481 creating a sidebar tray for filters and fluid containers on mobile views

--- a/web/themes/custom/cloudy/scss/_overrides.scss
+++ b/web/themes/custom/cloudy/scss/_overrides.scss
@@ -12,6 +12,7 @@ Description: Bootstrap 4 with Sass
 -------------------------------------------------*/
 body {
   background: $white;
+  overflow-x: hidden;
 }
 
 p {
