--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -64,7 +64,7 @@
 {{ page.pre_content }}
 {%
   set container_classes = [
-    not is_front ? 'container',
+    not is_front ? 'container-fluid',
     not is_front ? 'mt-4'
   ]
 %}
