--- a/web/themes/custom/cloudy/templates/layout/region--tools.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/region--tools.html.twig
@@ -15,8 +15,20 @@
  */
 #}
 
-{% if content %}
-  <div{{ attributes.addClass('tools','col-lg-3', 'col-sm-12', 'order-3')}}>
-    {{ content }}
+<div class='sidebar-wrapper order-1 order-sm-3'>
+
+  <button type="button" id="sidebarCollapse" class="btn btn-info">
+      <i class="fas fa-align-left"></i>
+      <span>Show Filters</span>
+  </button>
+
+  <div id='sidebar'>
+
+    {% if content %}
+      <div{{ attributes.addClass('tools')}}>
+        {{ content }}
+      </div>
+    {% endif %}
+
   </div>
-{% endif %}
+</div>
