--- a/web/themes/custom/cloudy/scss/_components.scss
+++ b/web/themes/custom/cloudy/scss/_components.scss
@@ -26,6 +26,7 @@
 @import 'components/_nav';
 @import 'components/paragraphs';
 @import 'components/search';
+@import 'components/_sidebar';
 @import 'components/_site-footer';
 @import 'components/_skip-link';
 @import 'components/_tables';
