POWR-1481 adding overflow to content wrapper as mobile ignores overflow rules on body

--- a/web/themes/custom/cloudy/scss/components/_sidebar.scss
+++ b/web/themes/custom/cloudy/scss/components/_sidebar.scss
@@ -1,3 +1,8 @@
+.hiiden-content {
+    position: relative;
+    overflow-x: hidden;
+}
+
 .sidebar-wrapper {
     display: flex;
     flex-direction: column;
