--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -65,6 +65,7 @@
 {%
   set container_classes = [
     not is_front ? 'container-fluid',
+    not is-front ? 'hidden-content',
     not is_front ? 'mt-4'
   ]
 %}
