POWR-1481 adding z-index to button and sidebar to overcome layering error in firefox

--- a/web/themes/custom/cloudy/scss/components/_sidebar.scss
+++ b/web/themes/custom/cloudy/scss/components/_sidebar.scss
@@ -1,4 +1,4 @@
-.hiiden-content {
+.hidden-content {
     position: relative;
     overflow-x: hidden;
 }
@@ -20,6 +20,7 @@
         position: absolute;
         left: -75px;
         width: 60px;
+        z-index: 1; // z-index needed to persist as top layer element in firefox
             @include media-breakpoint-up(sm) {
                 width: 75px;
                 left: -150px;
@@ -39,6 +40,7 @@
     right: -13px;
     width: 100%;
     box-shadow: -8px 7px 5px -4px rgba(0,0,0,0.44);
+    z-index: 1; // z-index needed to persist as top layer element in firefox
     @include media-breakpoint-up(sm) {
         right: -25px;
         width: 75%;
